@startuml
class Project {
    Long id
    String name
    Boolean isDeleted
    Long leaderId
    List<ProjectMember> projectMembers
    List<Issue> issues
}

class ProjectService {
    +List<ProjectResponseDto> getAllProject(Long signId)
}

class ProjectRepository {
    +List<Project> findByIsDeletedIsFalse()
}

class ProjectMember {
    Long id
    Member member
    Project project
    Boolean isDeleted
}

class ProjectMemberRepository {
    +List<ProjectMember> findByMemberIdAndIsDeletedFalse(Long memberId)
}

class DtoConverter {
    +ProjectResponseDto createProjectResponseDto(Project project)
}

ProjectService --> ProjectRepository
ProjectService --> ProjectMemberRepository
ProjectService --> DtoConverter
Project --> ProjectMember
Project --> Issue
ProjectMember --> Member
Issue --> Comment
@enduml
